--- a/config/config_example.json
+++ b/config/config_example.json
@@ -4,5 +4,10 @@
         "username": "your_username",
         "password": "your_password"
     },
-    "api_key": "votre_cle_api"
+    "season": {
+        "results_link": "https://mpg.football/league/mpg_league_NKU1UAPG/mpg_division_NKU1UAPG_5_2/results",
+        "season_number": 5,
+        "nb_division": 2,
+        "nb_players_per_league": 8
+    }
 }
